--- a/packages/base-button/lib/styles.css
+++ b/packages/base-button/lib/styles.css
@@ -1,5 +1,5 @@
 .Button {
-  background-color: #3490dc;
+  background-color: #f92a82;
   border-radius: 0.25rem;
   border: 1px solid #3490dc;
   color: #fff;
