--- a/packages/base-button/lib/styles.css
+++ b/packages/base-button/lib/styles.css
@@ -1,7 +1,7 @@
 .Button {
-  background-color: salmon;
+  background-color: #e56399;
   border-radius: 0.25rem;
-  border: 1px solid #3490dc;
+  border: 1px solid #e56399;
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
@@ -13,8 +13,8 @@
 
 .Button:hover,
 .Button:focus {
-  background-color: #2779bd;
-  border-color: #2779bd;
+  background-color: #c02163;
+  border-color: #c02163;
 }
 
 .ButtonSecondary {
